change to fixed the alignmnet issues of search textbox,pagination buttons

--- a/SynergyRMS/Content/Datatable/demo_table.css
+++ b/SynergyRMS/Content/Datatable/demo_table.css
@@ -57,12 +57,14 @@
 .dataTables_length {
 	width: 40%;
 	float: left;
+	margin-top:-13px;
 }
 
 .dataTables_filter {
 	width: 50%;
 	float: right;
 	text-align: right;
+	margin-top:-13px;
 }
 
 .dataTables_info {
@@ -75,6 +77,7 @@
 	* width: 50px;
 	float: right;
 	text-align: right;
+	margin-top:-21px;
 }
 
 /* Pagination nested */
